// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolveDescriptors should fail descriptors for case-0 1`] = `
"<unknown>:9:1: Native functions cannot be getters
Line 9, col 1:
  8 | @name(hello_world)
> 9 | get native sample(a: Int): Int;
      ^~~
"
`;

exports[`resolveDescriptors should fail descriptors for case-1 1`] = `
"<unknown>:9:1: Native functions cannot be getters
Line 9, col 1:
  8 | @name(hello_world)
> 9 | get native sample(a: Int): Int;
      ^~~
"
`;

exports[`resolveDescriptors should fail descriptors for case-2 1`] = `
"<unknown>:8:1: Getters must be defined within a contract
Line 8, col 1:
  7 | 
> 8 | get fun sample(a: Int): Int {
      ^~~
  9 |     return 0;
"
`;

exports[`resolveDescriptors should fail descriptors for case-3 1`] = `
"<unknown>:8:1: Getters must be defined within a contract
Line 8, col 1:
  7 | 
> 8 | get fun sample(a: Int): Int {
      ^~~
  9 |     return 0;
"
`;

exports[`resolveDescriptors should fail descriptors for case-4 1`] = `
"<unknown>:8:17: Extend function must have first argument named "self"
Line 8, col 17:
  7 | 
> 8 | extends fun inc(a: Int): Int {
                      ^~~~~~
  9 |     return a + 1;
"
`;

exports[`resolveDescriptors should fail descriptors for case-5 1`] = `
"<unknown>:8:17: Argument name "self" is reserved
Line 8, col 17:
  7 | 
> 8 | fun inc(a: Int, self: Int): Int {
                      ^~~~~~~~~
  9 |     return a + 1 + self;
"
`;

exports[`resolveDescriptors should fail descriptors for case-6 1`] = `
"<unknown>:11:3: Field b already exists
Line 11, col 3:
  10 |   b: Int;
> 11 |   b: Int;
         ^~~~~~~
  12 | }
"
`;

exports[`resolveDescriptors should fail descriptors for case-7 1`] = `
"<unknown>:11:3: Field b already exists
Line 11, col 3:
  10 |   b: Int;
> 11 |   b: Int;
         ^~~~~~~
  12 | }
"
`;

exports[`resolveDescriptors should fail descriptors for case-8 1`] = `
"<unknown>:13:3: Receive function cannot have optional argument
Line 13, col 3:
  12 | contract Pair {
> 13 |   receive(src: B?) {
         ^~~~~~~~~~~~~~~~~~
  14 |     
"
`;

exports[`resolveDescriptors should fail descriptors for case-9 1`] = `
"<unknown>:13:3: Receive function can only accept message
Line 13, col 3:
  12 | contract Pair {
> 13 |   receive(src: B) {
         ^~~~~~~~~~~~~~~~~
  14 |     
"
`;

exports[`resolveDescriptors should fail descriptors for case-10 1`] = `
"<unknown>:13:3: Receive function can only accept message, Slice or String
Line 13, col 3:
  12 | contract Pair {
> 13 |   receive(src: Int) {
         ^~~~~~~~~~~~~~~~~~~
  14 |     
"
`;

exports[`resolveDescriptors should fail descriptors for case-11 1`] = `
"<unknown>:12:23: Type Point not found
Line 12, col 23:
  11 |     }
> 12 |     get fun hello2(): Point {
                             ^~~~~
  13 |         return 0;
"
`;

exports[`resolveDescriptors should fail descriptors for case-12 1`] = `
"<unknown>:12:1: Type Main already exists
Line 12, col 1:
  11 | 
> 12 | struct Main {
       ^~~~~~~~~~~~~
  13 |     
"
`;

exports[`resolveDescriptors should fail descriptors for case-13 1`] = `
"<unknown>:12:1: Type Main already exists
Line 12, col 1:
  11 | 
> 12 | struct Main {
       ^~~~~~~~~~~~~
  13 |     
"
`;

exports[`resolveDescriptors should fail descriptors for case-14 1`] = `
"<unknown>:12:1: Type Main already exists
Line 12, col 1:
  11 | 
> 12 | contract Main {
       ^~~~~~~~~~~~~~~
  13 |     
"
`;

exports[`resolveDescriptors should fail descriptors for case-15 1`] = `
"<unknown>:12:1: Struct Main does not have any fields
Line 12, col 1:
  11 | 
> 12 | struct Main {
       ^~~~~~~~~~~~~
  13 |     
"
`;

exports[`resolveDescriptors should fail descriptors for case-16 1`] = `
"<unknown>:16:1: Struct Main does not have any fields
Line 16, col 1:
  15 | 
> 16 | struct Main {
       ^~~~~~~~~~~~~
  17 |     
"
`;

exports[`resolveDescriptors should fail descriptors for case-17 1`] = `
"<unknown>:8:1: Function hello already exists in type Main
Line 8, col 1:
  7 | 
> 8 | contract Main {
      ^~~~~~~~~~~~~~~
  9 |     fun hello(a: Main): Int {
"
`;

exports[`resolveDescriptors should fail descriptors for case-18 1`] = `
"<unknown>:9:24: Argument name "a" is already used
Line 9, col 24:
   8 | contract Main {
>  9 |     fun hello(a: Bool, a: Int): Int {
                              ^~~~~~
  10 | 
"
`;

exports[`resolveDescriptors should fail descriptors for case-19 1`] = `
"<unknown>:13:5: Init function already exists
Line 13, col 5:
  12 | 
> 13 |     init(a: Bool) {
           ^~~~~~~~~~~~~~~
  14 | 
"
`;

exports[`resolveDescriptors should fail descriptors for case-20 1`] = `
"<unknown>:12:1: Function hello already exists in type Main
Line 12, col 1:
  11 | 
> 12 | extends fun hello(self: Main): Bool {
       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  13 |     return true;
"
`;

exports[`resolveDescriptors should resolve descriptors for case-0 1`] = `
{
  "BaseTrait": {
    "ast": {
      "attributes": [],
      "declarations": [],
      "id": 3,
      "kind": "def_trait",
      "name": "BaseTrait",
      "origin": "user",
      "ref": trait BaseTrait {
    
},
      "traits": [],
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "trait",
    "name": "BaseTrait",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 1020,
  },
  "Bool": {
    "ast": {
      "id": 2,
      "kind": "primitive",
      "name": "Bool",
      "origin": "user",
      "ref": primitive Bool;,
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "primitive",
    "name": "Bool",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 33424,
  },
  "Int": {
    "ast": {
      "id": 1,
      "kind": "primitive",
      "name": "Int",
      "origin": "user",
      "ref": primitive Int;,
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "primitive",
    "name": "Int",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 38154,
  },
}
`;

exports[`resolveDescriptors should resolve descriptors for case-0 2`] = `{}`;

exports[`resolveDescriptors should resolve descriptors for case-1 1`] = `
{
  "BaseTrait": {
    "ast": {
      "attributes": [],
      "declarations": [],
      "id": 3,
      "kind": "def_trait",
      "name": "BaseTrait",
      "origin": "user",
      "ref": trait BaseTrait {
    
},
      "traits": [],
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "trait",
    "name": "BaseTrait",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 1020,
  },
  "Bool": {
    "ast": {
      "id": 2,
      "kind": "primitive",
      "name": "Bool",
      "origin": "user",
      "ref": primitive Bool;,
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "primitive",
    "name": "Bool",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 33424,
  },
  "Int": {
    "ast": {
      "id": 1,
      "kind": "primitive",
      "name": "Int",
      "origin": "user",
      "ref": primitive Int;,
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "primitive",
    "name": "Int",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 38154,
  },
  "Struct1": {
    "ast": {
      "fields": [
        {
          "as": null,
          "id": 5,
          "init": null,
          "kind": "def_field",
          "name": "a",
          "ref": a: Int;,
          "type": {
            "id": 4,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        {
          "as": null,
          "id": 7,
          "init": null,
          "kind": "def_field",
          "name": "b",
          "ref": b: Bool;,
          "type": {
            "id": 6,
            "kind": "type_ref_simple",
            "name": "Bool",
            "optional": false,
            "ref": Bool,
          },
        },
      ],
      "id": 8,
      "kind": "def_struct",
      "message": false,
      "name": "Struct1",
      "origin": "user",
      "prefix": null,
      "ref": struct Struct1 {
    a: Int;
    b: Bool;
},
    },
    "constants": [],
    "dependsOn": [],
    "fields": [
      {
        "abi": {
          "name": "a",
          "type": {
            "format": 257,
            "kind": "simple",
            "optional": false,
            "type": "int",
          },
        },
        "as": null,
        "ast": {
          "as": null,
          "id": 5,
          "init": null,
          "kind": "def_field",
          "name": "a",
          "ref": a: Int;,
          "type": {
            "id": 4,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        "default": undefined,
        "index": 0,
        "name": "a",
        "ref": a: Int;,
        "type": {
          "kind": "ref",
          "name": "Int",
          "optional": false,
        },
      },
      {
        "abi": {
          "name": "b",
          "type": {
            "kind": "simple",
            "optional": false,
            "type": "bool",
          },
        },
        "as": null,
        "ast": {
          "as": null,
          "id": 7,
          "init": null,
          "kind": "def_field",
          "name": "b",
          "ref": b: Bool;,
          "type": {
            "id": 6,
            "kind": "type_ref_simple",
            "name": "Bool",
            "optional": false,
            "ref": Bool,
          },
        },
        "default": undefined,
        "index": 1,
        "name": "b",
        "ref": b: Bool;,
        "type": {
          "kind": "ref",
          "name": "Bool",
          "optional": false,
        },
      },
    ],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "struct",
    "name": "Struct1",
    "origin": "user",
    "receivers": [],
    "signature": "Struct1{a:int257,b:bool}",
    "tlb": "_ a:int257 b:bool = Struct1",
    "traits": [],
    "uid": 63177,
  },
  "Struct2": {
    "ast": {
      "fields": [
        {
          "as": null,
          "id": 10,
          "init": null,
          "kind": "def_field",
          "name": "a",
          "ref": a: Struct1;,
          "type": {
            "id": 9,
            "kind": "type_ref_simple",
            "name": "Struct1",
            "optional": false,
            "ref": Struct1,
          },
        },
      ],
      "id": 11,
      "kind": "def_struct",
      "message": false,
      "name": "Struct2",
      "origin": "user",
      "prefix": null,
      "ref": struct Struct2 {
    a: Struct1;
},
    },
    "constants": [],
    "dependsOn": [],
    "fields": [
      {
        "abi": {
          "name": "a",
          "type": {
            "kind": "simple",
            "optional": false,
            "type": "Struct1",
          },
        },
        "as": null,
        "ast": {
          "as": null,
          "id": 10,
          "init": null,
          "kind": "def_field",
          "name": "a",
          "ref": a: Struct1;,
          "type": {
            "id": 9,
            "kind": "type_ref_simple",
            "name": "Struct1",
            "optional": false,
            "ref": Struct1,
          },
        },
        "default": undefined,
        "index": 0,
        "name": "a",
        "ref": a: Struct1;,
        "type": {
          "kind": "ref",
          "name": "Struct1",
          "optional": false,
        },
      },
    ],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "struct",
    "name": "Struct2",
    "origin": "user",
    "receivers": [],
    "signature": "Struct2{a:Struct1{a:int257,b:bool}}",
    "tlb": "_ a:Struct1{a:int257,b:bool} = Struct2",
    "traits": [],
    "uid": 50858,
  },
}
`;

exports[`resolveDescriptors should resolve descriptors for case-1 2`] = `{}`;

exports[`resolveDescriptors should resolve descriptors for case-2 1`] = `
{
  "BaseTrait": {
    "ast": {
      "attributes": [],
      "declarations": [],
      "id": 3,
      "kind": "def_trait",
      "name": "BaseTrait",
      "origin": "user",
      "ref": trait BaseTrait {
    
},
      "traits": [],
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "trait",
    "name": "BaseTrait",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 1020,
  },
  "Bool": {
    "ast": {
      "id": 2,
      "kind": "primitive",
      "name": "Bool",
      "origin": "user",
      "ref": primitive Bool;,
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "primitive",
    "name": "Bool",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 33424,
  },
  "Int": {
    "ast": {
      "id": 1,
      "kind": "primitive",
      "name": "Int",
      "origin": "user",
      "ref": primitive Int;,
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "primitive",
    "name": "Int",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 38154,
  },
}
`;

exports[`resolveDescriptors should resolve descriptors for case-2 2`] = `
{
  "testFunc": {
    "args": [],
    "ast": {
      "args": [],
      "attributes": [],
      "id": 7,
      "kind": "def_function",
      "name": "testFunc",
      "origin": "user",
      "ref": fun testFunc(): Int {
    return 0;
},
      "return": {
        "id": 4,
        "kind": "type_ref_simple",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 5,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 6,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
    "isAbstract": false,
    "isGetter": false,
    "isInline": false,
    "isMutating": false,
    "isOverrides": false,
    "isVirtual": false,
    "name": "testFunc",
    "origin": "user",
    "returns": {
      "kind": "ref",
      "name": "Int",
      "optional": false,
    },
    "self": null,
  },
  "testFunc2": {
    "args": [],
    "ast": {
      "args": [],
      "attributes": [],
      "id": 10,
      "kind": "def_function",
      "name": "testFunc2",
      "origin": "user",
      "ref": fun testFunc2() {
    return 0;
},
      "return": null,
      "statements": [
        {
          "expression": {
            "id": 8,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 9,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
    "isAbstract": false,
    "isGetter": false,
    "isInline": false,
    "isMutating": false,
    "isOverrides": false,
    "isVirtual": false,
    "name": "testFunc2",
    "origin": "user",
    "returns": {
      "kind": "void",
    },
    "self": null,
  },
  "testFunc3": {
    "args": [
      {
        "as": null,
        "name": "a",
        "ref": a: Int,
        "type": {
          "kind": "ref",
          "name": "Int",
          "optional": false,
        },
      },
      {
        "as": null,
        "name": "b",
        "ref": b: Bool,
        "type": {
          "kind": "ref",
          "name": "Bool",
          "optional": false,
        },
      },
    ],
    "ast": {
      "args": [
        {
          "id": 12,
          "kind": "def_argument",
          "name": "a",
          "ref": a: Int,
          "type": {
            "id": 11,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        {
          "id": 14,
          "kind": "def_argument",
          "name": "b",
          "ref": b: Bool,
          "type": {
            "id": 13,
            "kind": "type_ref_simple",
            "name": "Bool",
            "optional": false,
            "ref": Bool,
          },
        },
      ],
      "attributes": [],
      "id": 17,
      "kind": "def_function",
      "name": "testFunc3",
      "origin": "user",
      "ref": fun testFunc3(a: Int, b: Bool) {
    return 0;
},
      "return": null,
      "statements": [
        {
          "expression": {
            "id": 15,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 16,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
    "isAbstract": false,
    "isGetter": false,
    "isInline": false,
    "isMutating": false,
    "isOverrides": false,
    "isVirtual": false,
    "name": "testFunc3",
    "origin": "user",
    "returns": {
      "kind": "void",
    },
    "self": null,
  },
}
`;

exports[`resolveDescriptors should resolve descriptors for case-3 1`] = `
{
  "BaseTrait": {
    "ast": {
      "attributes": [],
      "declarations": [],
      "id": 3,
      "kind": "def_trait",
      "name": "BaseTrait",
      "origin": "user",
      "ref": trait BaseTrait {
    
},
      "traits": [],
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "trait",
    "name": "BaseTrait",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 1020,
  },
  "Bool": {
    "ast": {
      "id": 2,
      "kind": "primitive",
      "name": "Bool",
      "origin": "user",
      "ref": primitive Bool;,
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "primitive",
    "name": "Bool",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 33424,
  },
  "HelloWorld": {
    "ast": {
      "attributes": [],
      "declarations": [
        {
          "as": null,
          "id": 5,
          "init": null,
          "kind": "def_field",
          "name": "a",
          "ref": a: Int;,
          "type": {
            "id": 4,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        {
          "as": null,
          "id": 7,
          "init": null,
          "kind": "def_field",
          "name": "b",
          "ref": b: Bool;,
          "type": {
            "id": 6,
            "kind": "type_ref_simple",
            "name": "Bool",
            "optional": false,
            "ref": Bool,
          },
        },
        {
          "args": [],
          "id": 8,
          "kind": "def_init_function",
          "ref": init() {
        
    },
          "statements": [],
        },
        {
          "args": [],
          "attributes": [],
          "id": 9,
          "kind": "def_function",
          "name": "hello",
          "origin": "user",
          "ref": fun hello() {
        
    },
          "return": null,
          "statements": [],
        },
        {
          "args": [],
          "attributes": [],
          "id": 10,
          "kind": "def_function",
          "name": "hello2",
          "origin": "user",
          "ref": fun hello2() {
        
    },
          "return": null,
          "statements": [],
        },
      ],
      "id": 11,
      "kind": "def_contract",
      "name": "HelloWorld",
      "origin": "user",
      "ref": contract HelloWorld {
    a: Int;
    b: Bool;

    init() {
        
    }

    fun hello() {
        
    }

    fun hello2() {
        
    }
},
      "traits": [],
    },
    "constants": [],
    "dependsOn": [],
    "fields": [
      {
        "abi": {
          "name": "a",
          "type": {
            "format": 257,
            "kind": "simple",
            "optional": false,
            "type": "int",
          },
        },
        "as": null,
        "ast": {
          "as": null,
          "id": 5,
          "init": null,
          "kind": "def_field",
          "name": "a",
          "ref": a: Int;,
          "type": {
            "id": 4,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        "default": undefined,
        "index": 0,
        "name": "a",
        "ref": a: Int;,
        "type": {
          "kind": "ref",
          "name": "Int",
          "optional": false,
        },
      },
      {
        "abi": {
          "name": "b",
          "type": {
            "kind": "simple",
            "optional": false,
            "type": "bool",
          },
        },
        "as": null,
        "ast": {
          "as": null,
          "id": 7,
          "init": null,
          "kind": "def_field",
          "name": "b",
          "ref": b: Bool;,
          "type": {
            "id": 6,
            "kind": "type_ref_simple",
            "name": "Bool",
            "optional": false,
            "ref": Bool,
          },
        },
        "default": undefined,
        "index": 1,
        "name": "b",
        "ref": b: Bool;,
        "type": {
          "kind": "ref",
          "name": "Bool",
          "optional": false,
        },
      },
    ],
    "functions": Map {
      "hello" => {
        "args": [],
        "ast": {
          "args": [],
          "attributes": [],
          "id": 9,
          "kind": "def_function",
          "name": "hello",
          "origin": "user",
          "ref": fun hello() {
        
    },
          "return": null,
          "statements": [],
        },
        "isAbstract": false,
        "isGetter": false,
        "isInline": false,
        "isMutating": true,
        "isOverrides": false,
        "isVirtual": false,
        "name": "hello",
        "origin": "user",
        "returns": {
          "kind": "void",
        },
        "self": "HelloWorld",
      },
      "hello2" => {
        "args": [],
        "ast": {
          "args": [],
          "attributes": [],
          "id": 10,
          "kind": "def_function",
          "name": "hello2",
          "origin": "user",
          "ref": fun hello2() {
        
    },
          "return": null,
          "statements": [],
        },
        "isAbstract": false,
        "isGetter": false,
        "isInline": false,
        "isMutating": true,
        "isOverrides": false,
        "isVirtual": false,
        "name": "hello2",
        "origin": "user",
        "returns": {
          "kind": "void",
        },
        "self": "HelloWorld",
      },
    },
    "header": null,
    "init": {
      "args": [],
      "ast": {
        "args": [],
        "id": 8,
        "kind": "def_init_function",
        "ref": init() {
        
    },
        "statements": [],
      },
    },
    "interfaces": [],
    "kind": "contract",
    "name": "HelloWorld",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [
      {
        "ast": {
          "attributes": [],
          "declarations": [],
          "id": 3,
          "kind": "def_trait",
          "name": "BaseTrait",
          "origin": "user",
          "ref": trait BaseTrait {
    
},
          "traits": [],
        },
        "constants": [],
        "dependsOn": [],
        "fields": [],
        "functions": Map {},
        "header": null,
        "init": null,
        "interfaces": [],
        "kind": "trait",
        "name": "BaseTrait",
        "origin": "user",
        "receivers": [],
        "signature": null,
        "tlb": null,
        "traits": [],
        "uid": 1020,
      },
    ],
    "uid": 31498,
  },
  "Int": {
    "ast": {
      "id": 1,
      "kind": "primitive",
      "name": "Int",
      "origin": "user",
      "ref": primitive Int;,
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "primitive",
    "name": "Int",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 38154,
  },
}
`;

exports[`resolveDescriptors should resolve descriptors for case-3 2`] = `{}`;

exports[`resolveDescriptors should resolve descriptors for case-4 1`] = `
{
  "BaseTrait": {
    "ast": {
      "attributes": [],
      "declarations": [],
      "id": 3,
      "kind": "def_trait",
      "name": "BaseTrait",
      "origin": "user",
      "ref": trait BaseTrait {
    
},
      "traits": [],
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "trait",
    "name": "BaseTrait",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 1020,
  },
  "Bool": {
    "ast": {
      "id": 2,
      "kind": "primitive",
      "name": "Bool",
      "origin": "user",
      "ref": primitive Bool;,
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "primitive",
    "name": "Bool",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 33424,
  },
  "Int": {
    "ast": {
      "id": 1,
      "kind": "primitive",
      "name": "Int",
      "origin": "user",
      "ref": primitive Int;,
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "primitive",
    "name": "Int",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 38154,
  },
}
`;

exports[`resolveDescriptors should resolve descriptors for case-4 2`] = `
{
  "sample": {
    "args": [
      {
        "as": null,
        "name": "a",
        "ref": a: Int,
        "type": {
          "kind": "ref",
          "name": "Int",
          "optional": false,
        },
      },
    ],
    "ast": {
      "args": [
        {
          "id": 6,
          "kind": "def_argument",
          "name": "a",
          "ref": a: Int,
          "type": {
            "id": 5,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
      ],
      "attributes": [],
      "id": 7,
      "kind": "def_native_function",
      "name": "sample",
      "nativeName": "hello_world",
      "origin": "user",
      "ref": @name(hello_world)
native sample(a: Int): Int;,
      "return": {
        "id": 4,
        "kind": "type_ref_simple",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
    },
    "isAbstract": false,
    "isGetter": false,
    "isInline": false,
    "isMutating": false,
    "isOverrides": false,
    "isVirtual": false,
    "name": "sample",
    "origin": "user",
    "returns": {
      "kind": "ref",
      "name": "Int",
      "optional": false,
    },
    "self": null,
  },
}
`;

exports[`resolveDescriptors should resolve descriptors for case-5 1`] = `
{
  "BaseTrait": {
    "ast": {
      "attributes": [],
      "declarations": [],
      "id": 3,
      "kind": "def_trait",
      "name": "BaseTrait",
      "origin": "user",
      "ref": trait BaseTrait {
    
},
      "traits": [],
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "trait",
    "name": "BaseTrait",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 1020,
  },
  "Bool": {
    "ast": {
      "id": 2,
      "kind": "primitive",
      "name": "Bool",
      "origin": "user",
      "ref": primitive Bool;,
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "primitive",
    "name": "Bool",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 33424,
  },
  "Int": {
    "ast": {
      "id": 1,
      "kind": "primitive",
      "name": "Int",
      "origin": "user",
      "ref": primitive Int;,
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {
      "inc" => {
        "args": [],
        "ast": {
          "args": [
            {
              "id": 6,
              "kind": "def_argument",
              "name": "self",
              "ref": self: Int,
              "type": {
                "id": 5,
                "kind": "type_ref_simple",
                "name": "Int",
                "optional": false,
                "ref": Int,
              },
            },
          ],
          "attributes": [
            {
              "ref": mutates,
              "type": "mutates",
            },
            {
              "ref": extends,
              "type": "extends",
            },
          ],
          "id": 7,
          "kind": "def_native_function",
          "name": "inc",
          "nativeName": "inc",
          "origin": "user",
          "ref": @name(inc)
mutates extends native inc(self: Int): Int;,
          "return": {
            "id": 4,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        "isAbstract": false,
        "isGetter": false,
        "isInline": false,
        "isMutating": true,
        "isOverrides": false,
        "isVirtual": false,
        "name": "inc",
        "origin": "user",
        "returns": {
          "kind": "ref",
          "name": "Int",
          "optional": false,
        },
        "self": "Int",
      },
    },
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "primitive",
    "name": "Int",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 38154,
  },
}
`;

exports[`resolveDescriptors should resolve descriptors for case-5 2`] = `{}`;

exports[`resolveDescriptors should resolve descriptors for case-6 1`] = `
{
  "BaseTrait": {
    "ast": {
      "attributes": [],
      "declarations": [],
      "id": 3,
      "kind": "def_trait",
      "name": "BaseTrait",
      "origin": "user",
      "ref": trait BaseTrait {
    
},
      "traits": [],
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "trait",
    "name": "BaseTrait",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 1020,
  },
  "Bool": {
    "ast": {
      "id": 2,
      "kind": "primitive",
      "name": "Bool",
      "origin": "user",
      "ref": primitive Bool;,
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "primitive",
    "name": "Bool",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 33424,
  },
  "Int": {
    "ast": {
      "id": 1,
      "kind": "primitive",
      "name": "Int",
      "origin": "user",
      "ref": primitive Int;,
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {
      "inc" => {
        "args": [],
        "ast": {
          "args": [
            {
              "id": 6,
              "kind": "def_argument",
              "name": "self",
              "ref": self: Int,
              "type": {
                "id": 5,
                "kind": "type_ref_simple",
                "name": "Int",
                "optional": false,
                "ref": Int,
              },
            },
          ],
          "attributes": [
            {
              "ref": extends,
              "type": "extends",
            },
          ],
          "id": 11,
          "kind": "def_function",
          "name": "inc",
          "origin": "user",
          "ref": extends fun inc(self: Int): Int {
    return self + 1;
},
          "return": {
            "id": 4,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
          "statements": [
            {
              "expression": {
                "id": 9,
                "kind": "op_binary",
                "left": {
                  "id": 7,
                  "kind": "id",
                  "ref": self,
                  "value": "self",
                },
                "op": "+",
                "ref": self + 1,
                "right": {
                  "id": 8,
                  "kind": "number",
                  "ref": 1,
                  "value": 1n,
                },
              },
              "id": 10,
              "kind": "statement_return",
              "ref": return self + 1;,
            },
          ],
        },
        "isAbstract": false,
        "isGetter": false,
        "isInline": false,
        "isMutating": false,
        "isOverrides": false,
        "isVirtual": false,
        "name": "inc",
        "origin": "user",
        "returns": {
          "kind": "ref",
          "name": "Int",
          "optional": false,
        },
        "self": "Int",
      },
    },
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "primitive",
    "name": "Int",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 38154,
  },
}
`;

exports[`resolveDescriptors should resolve descriptors for case-6 2`] = `{}`;

exports[`resolveDescriptors should resolve descriptors for case-7 1`] = `
{
  "BaseTrait": {
    "ast": {
      "attributes": [],
      "declarations": [],
      "id": 3,
      "kind": "def_trait",
      "name": "BaseTrait",
      "origin": "user",
      "ref": trait BaseTrait {
    
},
      "traits": [],
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "trait",
    "name": "BaseTrait",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 1020,
  },
  "Bool": {
    "ast": {
      "id": 2,
      "kind": "primitive",
      "name": "Bool",
      "origin": "user",
      "ref": primitive Bool;,
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "primitive",
    "name": "Bool",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 33424,
  },
  "Int": {
    "ast": {
      "id": 1,
      "kind": "primitive",
      "name": "Int",
      "origin": "user",
      "ref": primitive Int;,
    },
    "constants": [],
    "dependsOn": [],
    "fields": [],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "primitive",
    "name": "Int",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [],
    "uid": 38154,
  },
  "Main": {
    "ast": {
      "attributes": [],
      "declarations": [
        {
          "as": null,
          "id": 8,
          "init": null,
          "kind": "def_field",
          "name": "a",
          "ref": a: Int;,
          "type": {
            "id": 7,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        {
          "args": [
            {
              "id": 10,
              "kind": "def_argument",
              "name": "a",
              "ref": a: Int,
              "type": {
                "id": 9,
                "kind": "type_ref_simple",
                "name": "Int",
                "optional": false,
                "ref": Int,
              },
            },
          ],
          "id": 15,
          "kind": "def_init_function",
          "ref": init(a: Int) {
        self.a = a;
    },
          "statements": [
            {
              "expression": {
                "id": 13,
                "kind": "id",
                "ref": a,
                "value": "a",
              },
              "id": 14,
              "kind": "statement_assign",
              "path": [
                {
                  "id": 11,
                  "kind": "lvalue_ref",
                  "name": "self",
                  "ref": self.,
                },
                {
                  "id": 12,
                  "kind": "lvalue_ref",
                  "name": "a",
                  "ref": a,
                },
              ],
              "ref": self.a = a;,
            },
          ],
        },
        {
          "args": [],
          "attributes": [
            {
              "ref": get,
              "type": "get",
            },
          ],
          "id": 19,
          "kind": "def_function",
          "name": "hello",
          "origin": "user",
          "ref": get fun hello(): Int {
        return 0;
    },
          "return": {
            "id": 16,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
          "statements": [
            {
              "expression": {
                "id": 17,
                "kind": "number",
                "ref": 0,
                "value": 0n,
              },
              "id": 18,
              "kind": "statement_return",
              "ref": return 0;,
            },
          ],
        },
        {
          "args": [],
          "attributes": [
            {
              "ref": get,
              "type": "get",
            },
          ],
          "id": 23,
          "kind": "def_function",
          "name": "hello2",
          "origin": "user",
          "ref": get fun hello2(): Point {
        return 0;
    },
          "return": {
            "id": 20,
            "kind": "type_ref_simple",
            "name": "Point",
            "optional": false,
            "ref": Point,
          },
          "statements": [
            {
              "expression": {
                "id": 21,
                "kind": "number",
                "ref": 0,
                "value": 0n,
              },
              "id": 22,
              "kind": "statement_return",
              "ref": return 0;,
            },
          ],
        },
      ],
      "id": 24,
      "kind": "def_contract",
      "name": "Main",
      "origin": "user",
      "ref": contract Main {
    a: Int;
    init(a: Int) {
        self.a = a;
    }

    get fun hello(): Int {
        return 0;
    }
    get fun hello2(): Point {
        return 0;
    }
},
      "traits": [],
    },
    "constants": [],
    "dependsOn": [],
    "fields": [
      {
        "abi": {
          "name": "a",
          "type": {
            "format": 257,
            "kind": "simple",
            "optional": false,
            "type": "int",
          },
        },
        "as": null,
        "ast": {
          "as": null,
          "id": 8,
          "init": null,
          "kind": "def_field",
          "name": "a",
          "ref": a: Int;,
          "type": {
            "id": 7,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        "default": undefined,
        "index": 0,
        "name": "a",
        "ref": a: Int;,
        "type": {
          "kind": "ref",
          "name": "Int",
          "optional": false,
        },
      },
    ],
    "functions": Map {
      "hello" => {
        "args": [],
        "ast": {
          "args": [],
          "attributes": [
            {
              "ref": get,
              "type": "get",
            },
          ],
          "id": 19,
          "kind": "def_function",
          "name": "hello",
          "origin": "user",
          "ref": get fun hello(): Int {
        return 0;
    },
          "return": {
            "id": 16,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
          "statements": [
            {
              "expression": {
                "id": 17,
                "kind": "number",
                "ref": 0,
                "value": 0n,
              },
              "id": 18,
              "kind": "statement_return",
              "ref": return 0;,
            },
          ],
        },
        "isAbstract": false,
        "isGetter": true,
        "isInline": false,
        "isMutating": true,
        "isOverrides": false,
        "isVirtual": false,
        "name": "hello",
        "origin": "user",
        "returns": {
          "kind": "ref",
          "name": "Int",
          "optional": false,
        },
        "self": "Main",
      },
      "hello2" => {
        "args": [],
        "ast": {
          "args": [],
          "attributes": [
            {
              "ref": get,
              "type": "get",
            },
          ],
          "id": 23,
          "kind": "def_function",
          "name": "hello2",
          "origin": "user",
          "ref": get fun hello2(): Point {
        return 0;
    },
          "return": {
            "id": 20,
            "kind": "type_ref_simple",
            "name": "Point",
            "optional": false,
            "ref": Point,
          },
          "statements": [
            {
              "expression": {
                "id": 21,
                "kind": "number",
                "ref": 0,
                "value": 0n,
              },
              "id": 22,
              "kind": "statement_return",
              "ref": return 0;,
            },
          ],
        },
        "isAbstract": false,
        "isGetter": true,
        "isInline": false,
        "isMutating": true,
        "isOverrides": false,
        "isVirtual": false,
        "name": "hello2",
        "origin": "user",
        "returns": {
          "kind": "ref",
          "name": "Point",
          "optional": false,
        },
        "self": "Main",
      },
    },
    "header": null,
    "init": {
      "args": [
        {
          "as": null,
          "name": "a",
          "ref": a: Int,
          "type": {
            "kind": "ref",
            "name": "Int",
            "optional": false,
          },
        },
      ],
      "ast": {
        "args": [
          {
            "id": 10,
            "kind": "def_argument",
            "name": "a",
            "ref": a: Int,
            "type": {
              "id": 9,
              "kind": "type_ref_simple",
              "name": "Int",
              "optional": false,
              "ref": Int,
            },
          },
        ],
        "id": 15,
        "kind": "def_init_function",
        "ref": init(a: Int) {
        self.a = a;
    },
        "statements": [
          {
            "expression": {
              "id": 13,
              "kind": "id",
              "ref": a,
              "value": "a",
            },
            "id": 14,
            "kind": "statement_assign",
            "path": [
              {
                "id": 11,
                "kind": "lvalue_ref",
                "name": "self",
                "ref": self.,
              },
              {
                "id": 12,
                "kind": "lvalue_ref",
                "name": "a",
                "ref": a,
              },
            ],
            "ref": self.a = a;,
          },
        ],
      },
    },
    "interfaces": [],
    "kind": "contract",
    "name": "Main",
    "origin": "user",
    "receivers": [],
    "signature": null,
    "tlb": null,
    "traits": [
      {
        "ast": {
          "attributes": [],
          "declarations": [],
          "id": 3,
          "kind": "def_trait",
          "name": "BaseTrait",
          "origin": "user",
          "ref": trait BaseTrait {
    
},
          "traits": [],
        },
        "constants": [],
        "dependsOn": [],
        "fields": [],
        "functions": Map {},
        "header": null,
        "init": null,
        "interfaces": [],
        "kind": "trait",
        "name": "BaseTrait",
        "origin": "user",
        "receivers": [],
        "signature": null,
        "tlb": null,
        "traits": [],
        "uid": 1020,
      },
    ],
    "uid": 51099,
  },
  "Point": {
    "ast": {
      "fields": [
        {
          "as": null,
          "id": 5,
          "init": null,
          "kind": "def_field",
          "name": "p",
          "ref": p: Int;,
          "type": {
            "id": 4,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
      ],
      "id": 6,
      "kind": "def_struct",
      "message": false,
      "name": "Point",
      "origin": "user",
      "prefix": null,
      "ref": struct Point {
    p: Int;
},
    },
    "constants": [],
    "dependsOn": [],
    "fields": [
      {
        "abi": {
          "name": "p",
          "type": {
            "format": 257,
            "kind": "simple",
            "optional": false,
            "type": "int",
          },
        },
        "as": null,
        "ast": {
          "as": null,
          "id": 5,
          "init": null,
          "kind": "def_field",
          "name": "p",
          "ref": p: Int;,
          "type": {
            "id": 4,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        "default": undefined,
        "index": 0,
        "name": "p",
        "ref": p: Int;,
        "type": {
          "kind": "ref",
          "name": "Int",
          "optional": false,
        },
      },
    ],
    "functions": Map {},
    "header": null,
    "init": null,
    "interfaces": [],
    "kind": "struct",
    "name": "Point",
    "origin": "user",
    "receivers": [],
    "signature": "Point{p:int257}",
    "tlb": "_ p:int257 = Point",
    "traits": [],
    "uid": 35778,
  },
}
`;

exports[`resolveDescriptors should resolve descriptors for case-7 2`] = `{}`;
